force-app/main/default/objects/Task_Unit__c/Task_Unit__c.object-meta.xml
<CustomObject>
    <description>Task Units aggregates the tasks based on WBS estimations allowing to analyse the variations of real spent time.</description>
    <label>Task Estimation Unit</label>
    <nameField>
        <label>Task Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Estimation Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>