force-app/main/default/objects/Task_Unit__c/fields/Estimation_Category__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Category__c</fullName>
    <label>Estimation Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project management</fullName>
            </value>
            <value>
                <fullName>Requirements and solution design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Final tests, corrections and deployment</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>