force-app/main/default/objects/Task_Unit__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Task Estimation Units</relationshipLabel>
    <relationshipName>Task_Estimation_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>