force-app/main/default/objects/Task_Unit__c/fields/Time_Estimated_hrs__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimated_hrs__c</fullName>
    <label>Time Estimated (hrs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>