force-app/main/default/objects/Task_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TaskRay_Project__c</columns>
    <columns>Time_Estimated_hrs__c</columns>
    <columns>Estimation_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>